[gd_scene load_steps=7 format=2]

[ext_resource path="res://Interfaz.gd" type="Script" id=1]
[ext_resource path="res://Fuentes/Pixellari.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fuentes/Senko Hanabi DEMO.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 3 )

[node name="Interfaz" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="StonksLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -85.0
margin_right = 85.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 4 )
text = "5"
align = 1

[node name="Mensaje" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.5
margin_top = -121.5
margin_right = 300.5
margin_bottom = 121.5
custom_fonts/font = SubResource( 2 )
text = "Pelluhue stonks
"
align = 1
valign = 1

[node name="BotonJugar" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -167.818
margin_top = -163.546
margin_right = 180.182
margin_bottom = -69.5457
custom_fonts/font = SubResource( 3 )
text = "JUGAR"

[node name="MensajeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="BotonJugar" to="." method="_on_BotonJugar_pressed"]
[connection signal="timeout" from="MensajeTimer" to="." method="_on_MensajeTimer_timeout"]
